--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: My Blog
-description: "这是一个一个"
+title: "我的博客"
+description: ""
 url: "https://STEXxx08.github.io"  # 替换为你的 GitHub 用户名
 baseurl: ""  # 留空
 theme: jekyll-theme-Tactile
